# rust_axum

./: Cargo.toml
shell_cmd/: cdev  ctest
src/: main.rs
tests/: quick_dev.rs
