[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
anyhow = "1.0.71"
http-test = "0.0.0"
httpc-test = "0.1.4"
